--- a/Qlearning/Uczenie ze wzmocnieniem - Miłosz Mizak.ipynb
+++ b/Qlearning/Uczenie ze wzmocnieniem - Miłosz Mizak.ipynb
@@ -171,7 +171,7 @@
    "id": "67d71876",
    "metadata": {},
    "source": [
-    "# 3. Testy\n",
+    "### 3. Testy\n",
     "\n",
     "Aby zbadać działanie algorytmu oraz wpływ szybkości uczenia się na jego działanie, stworzyłem cztery funkcje testujące zawarte w pliku **Qtest.py**. Każda z nich testuje jedną z czterech strategii, a następnie generuje odpowiednie wykresy. Gdy strategia sama w sobie posiada pewien parametr który można modyfikować, dla każdego z tych wewnętrznych parametrów tworzony jest nowy wykres.\n",
     "\n",
@@ -186,7 +186,7 @@
    "source": [
     "## Wykresy\n",
     "\n",
-    "![greedy strategy](graphs/greedy.png)\n",
+    "![greedy strategy](graphs/greedy1.png)\n",
     "\n",
     "![epsilon greedy strategy 0.3](graphs/epsilon_greedy%2Cepsilon%3D0%2C3.png)\n",
     "\n",
@@ -201,6 +201,23 @@
     "![boltzmann strategy 10](graphs/boltzmann%2Ctau%3D10.png)\n",
     "\n",
     "![counting strategy](graphs/count.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0f7ce59c",
+   "metadata": {},
+   "source": [
+    "# 4. Wnioski\n",
+    "\n",
+    "Choć posczególne strategie różnią się efektywnością, to istnieje jeden wspólny mianownik. Gdy parametr uczenia się jest równy 1, algorytm uczy się najszybciej. Jest to zgodne z literaturą, gdzie taka wartość określana jest jako optymalna. Im wartość niższa od 1, tym algorytm wolniej się uczy. Co jednak ciekawe, zwiększenie tego parametru do 5 powoduje całkowite załamanie uczenia się. Najprawdopodobniej wynika to z tego, iż przy tak wysokim parametrze uczenia się stara wiedza jest całkowicie zamazywana przez nową. Nowe wartości powinny jedynie delikatnie zmieniać wartość nagrody, a nie stanowić jej większość.\n",
+    "\n",
+    "Strategia zachłanna i E-zachłanna dają dobre wyniki, choć przy E-zachłannej należy uważać z parameterem E. Gdy jest równy 0.3, daje to najlepsze wyniki. Jest to dobry balans pomiędzy eksploracją przestrzeni a eksploatacją zdobytej już wiedzy. Strategia licznikowa także wykonuje swoje zadanie, choć zauważalnie gorzej niż strategie zachłanne.\n",
+    "\n",
+    "Najciekawiej jednak działa strategia oparta na rozkładzie Boltzmanna. Niezależnie od parametru tau oraz od parametru uczenia się, wyniki są niezwykle chaotyczne. Nie jest to jednak zachowanie całkowicie losowe. Gdyby tak było, wykres powinien być linią prostą. Algorytm wykonuje czasami poprawne ruchy i czasami osiąga sukces, ale losowość jest najwyraźniej zbyt duża, aby był w stanie osiągać ten cel konsekwentnie.\n",
+    "\n",
+    "Symptomy nadmiernej losowości można dostrzec na wykresie ze strategią E-zachłanną, z E równym 0.7. Choć algorytm uczy się, dochodząc do efektwności na poziomie 60%, to nie jest w stanie przekroczyć tej bariery. Eksploracja znacznie przeważa nad eksploatacją, więc algorytm nie jest w stanie dopracować tych dobrych ścieżek. Moim zdaniem strategia Boltzmannowska posiada ten sam problem, z tym że w dużo gorszym stopniu."
    ]
   }
  ],
