done for real this time

--- a/Qlearning/Uczenie ze wzmocnieniem - Miłosz Mizak.ipynb
+++ b/Qlearning/Uczenie ze wzmocnieniem - Miłosz Mizak.ipynb
@@ -13,6 +13,8 @@
     "\n",
     "Przedmiotem szóstego zadania była implementacja algorytmu Q-learning oraz zbadanie jego efektywności na podstawie środowiska **Taxi** z modułu **Gym**. Oprócz tego należało zbadać wpływ hiperparametru szybkości uczenia się na wyniki.\n",
     "\n",
+    "Środowisko Taxi jest środowiskiem dyskretnym. Na planszy znajdują się cztery wyróżnione pola - na jednym z nich zawsze startuje taksówka, na innym stoi pasażer, a jeszcze inne jest punktem końcowym. Celem taksówki jest podjechanie po pasażera, dojechanie do pola końcowego i wysadzenie pasażera. To sprawia, że taksówka posiada 6 możliwych czynności do wykonania - ruch w górę, dół, lewo i prawo, podniesienie pasażera i upuszczenie pasażera. Niewytrenowany algorytm powoduje, że taksówka wykonuje losowe ruchy. Natomiast po treningu taksówka powinna dojeżdżać do celu niemal za każdym razem.\n",
+    "\n",
     "### 2. Implementacja\n",
     "\n",
     "Algorytm został zaimplementowany w postaci klasy **Q_learning** w pliku **Qlearn.py**. Podczas inicjalizacji istnieje możliwość wczytania tabeli z wartościami nagród dla poszczególnych stanów (nazywaną dalej **tabelą Q**) z pliku json. Plik musi znajdować się w folderze wykonawczym oraz nosić nazwę **qtable.json**. \n",
@@ -79,7 +81,14 @@
     "Poszczególne strategie wyboru ruchu prezentują się następująco:\n",
     "* strategia zachłanna - algorytm wybiera ruch o największej wartości nagrody,\n",
     "* strategia E-zachłanna - algorytm z prawdopodobieństwem E wybiera losowy ruch, a z prawdopodobieństwem 1 - E: ruch zachłanny\n",
-    "* strategia oparta na rozkładzie Boltzmanna - każdy ruch otrzymuje określone prawdopodobieństwo na podstawie wartości nagród. Ruch jest następnie wybierany na podstawie tych prawdopodobieństw.\n",
+    "* strategia oparta na rozkładzie Boltzmanna - każdy ruch otrzymuje określone prawdopodobieństwo na podstawie wartości nagród. Ruch jest następnie wybierany na podstawie tych prawdopodobieństw. Prawdopodobieństwa uzyskiwane są na podstawie następującego wzoru:\n",
+    "\n",
+    "$$\n",
+    "\\begin {align}\n",
+    "\\large\\pi(x,a) = \\large\\frac{exp(Q(x,a)/T)}{\\sum \\limits _{b} ^{} exp(Q(x,b)/T)}\n",
+    "\\end {align}\n",
+    "$$\n",
+    "\n",
     "* strategia licznikowa - w 20% przypadków wybierany jest ruch, który do tej pory był wybierany najrzadziej. W przeciwnym wypadku używana jest strategia zachłanna."
    ]
   },
@@ -213,11 +222,7 @@
     "\n",
     "Choć posczególne strategie różnią się efektywnością, to istnieje jeden wspólny mianownik. Gdy parametr uczenia się jest równy 1, algorytm uczy się najszybciej. Jest to zgodne z literaturą, gdzie taka wartość określana jest jako optymalna. Im wartość niższa od 1, tym algorytm wolniej się uczy. Co jednak ciekawe, zwiększenie tego parametru do 5 powoduje całkowite załamanie uczenia się. Najprawdopodobniej wynika to z tego, iż przy tak wysokim parametrze uczenia się stara wiedza jest całkowicie zamazywana przez nową. Nowe wartości powinny jedynie delikatnie zmieniać wartość nagrody, a nie stanowić jej większość.\n",
     "\n",
-    "Strategia zachłanna i E-zachłanna dają dobre wyniki, choć przy E-zachłannej należy uważać z parameterem E. Gdy jest równy 0.3, daje to najlepsze wyniki. Jest to dobry balans pomiędzy eksploracją przestrzeni a eksploatacją zdobytej już wiedzy. Strategia licznikowa także wykonuje swoje zadanie, choć zauważalnie gorzej niż strategie zachłanne.\n",
-    "\n",
-    "Najciekawiej jednak działa strategia oparta na rozkładzie Boltzmanna. Niezależnie od parametru tau oraz od parametru uczenia się, wyniki są niezwykle chaotyczne. Nie jest to jednak zachowanie całkowicie losowe. Gdyby tak było, wykres powinien być linią prostą. Algorytm wykonuje czasami poprawne ruchy i czasami osiąga sukces, ale losowość jest najwyraźniej zbyt duża, aby był w stanie osiągać ten cel konsekwentnie.\n",
-    "\n",
-    "Symptomy nadmiernej losowości można dostrzec na wykresie ze strategią E-zachłanną, z E równym 0.7. Choć algorytm uczy się, dochodząc do efektwności na poziomie 60%, to nie jest w stanie przekroczyć tej bariery. Eksploracja znacznie przeważa nad eksploatacją, więc algorytm nie jest w stanie dopracować tych dobrych ścieżek. Moim zdaniem strategia Boltzmannowska posiada ten sam problem, z tym że w dużo gorszym stopniu."
+    "Strategia zachłanna i E-zachłanna dają dobre wyniki, choć przy E-zachłannej należy uważać z parameterem E. Gdy jest równy 0.3, daje to najlepsze wyniki. Jest to dobry balans pomiędzy eksploracją przestrzeni a eksploatacją zdobytej już wiedzy. Strategia licznikowa także wykonuje swoje zadanie, choć zauważalnie gorzej niż strategie zachłanne. Natomiast najlepsze efekty daje strategia Boltzmannowska. Jest to oczekiwany wynik - strategia Boltzmannowska jest rozwinięciem strategii E-zachłannej, więc naturalnie powinna dawać lepsze efekty. Należy jednak zaznaczyć, że do poprawnego działania tej strategii wymagana jest wysoka wartości parametru przeceny (discount factor). "
    ]
   }
  ],
